Agregacion y configuracion Usermodel

--- a/Public/Home.html
+++ b/Public/Home.html
@@ -10,8 +10,8 @@
     <header>
       <img src="../Src/Img/Logo2.png" alt="Logo" />
       <nav>
-        <button > <a href="../Src/Routes/views/login.php">Iniciar Sesión</a></button>
-        <button ><a href="../Src/Routes/views/register.php">Registrarse</a></button>
+        <button > <a href="../Src/Routes/views/login.html">Iniciar Sesión</a></button>
+        <button ><a href="../Src/Routes/views/register.html">Registrarse</a></button>
       </nav>
     </header>
     <main>
