--- a/Public/Index.html
+++ b/Public/Index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>GOOD HABITS</title>
-  <link rel="stylesheet" href="./ccs/Inicio.css" />
+  <link rel="stylesheet" href="/Habitos/Public/ccs/Inicio.css" />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> 
 </head>
 <body>
   <header>
-    <img src="../Src/Img/Logo2.png" alt="Logo" />
+    <img src="/Habitos/Src/Img/Logo2.png" alt="Logo" />
     <nav>
       <button id="btnLogin">Iniciar Sesión</button>
       <button id="btnRegister">Registrarse</button>
@@ -29,5 +29,5 @@
     <div id="contenidoDinamico"></div> 
   </main>
 
-  <script src="./js/home.js"></script> </body>
+  <script src="/Habitos/Public/js/home.js"></script> </body>
 </html>
